Further changes to suite tests.